@@ -4,6 +4,7 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import org.passay.*;
 import org.springframework.security.authentication.AnonymousAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -11,17 +12,18 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
 
 public class LoginFilter extends OncePerRequestFilter {
 
-    // shouldNotFilter restricts this filter to POST /login requests only,
-    // so other POST endpoints (e.g. /register) are not affected.
-    @Override
-    protected boolean shouldNotFilter(HttpServletRequest request) {
-        return !("POST".equalsIgnoreCase(request.getMethod())
-                && "/login".equals(request.getServletPath()));
-    }
+    final static PasswordValidator passwordValidator = new PasswordValidator(Arrays.asList(
+            new LengthRule(8, 30),
+            new CharacterRule(EnglishCharacterData.UpperCase, 1),
+            new CharacterRule(EnglishCharacterData.LowerCase, 1),
+            new CharacterRule(EnglishCharacterData.Digit, 1),
+            new CharacterRule(EnglishCharacterData.Special, 1),
+            new WhitespaceRule()
+    ));
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
@@ -32,26 +34,38 @@ public class LoginFilter extends OncePerRequestFilter {
                 && !(auth instanceof AnonymousAuthenticationToken);
 
         // 2. If they are logged in and trying to access the login page/path, redirect them away
-        if (isAuthenticated) {
+        if (isAuthenticated && "/login-page".equals(request.getServletPath())) {
             response.sendRedirect("/");
             return;
         }
 
-        String email = request.getParameter("email");
-        String password = request.getParameter("password");
+        if ("POST".equalsIgnoreCase(request.getMethod()) && "/login".equals(request.getServletPath())) {
 
-        if (email == null || email.isBlank() || password == null || password.isBlank()) {
-            response.sendRedirect("/login-page?msg=" + URLEncoder.encode("Provide Authentication Details", StandardCharsets.UTF_8));
-            return;
+            String email = request.getParameter("email");
+            String password = request.getParameter("password");
+
+            if (email == null || email.isBlank() || password == null || password.isBlank()) {
+                response.sendRedirect("/login-page?msg="+ URLEncoder.encode("Provide Authentication Details","UTF-8"));
+                return;
+            }
+
+            String ruhunaRegex = "^[a-zA-Z0-9._%+-]+@[a-z0-9]+\\.ruh\\.ac\\.lk$";
+
+            if (!email.toLowerCase().matches(ruhunaRegex)) {
+                response.sendRedirect("/login-page?msg="+ URLEncoder.encode("Must use a valid University of Ruhuna email","UTF-8"));
+                return;
+            }
+
+            RuleResult result = passwordValidator.validate(new PasswordData(password));
+            if (!result.isValid()) {
+
+                String failureMessage = String.join(", ", passwordValidator.getMessages(result));
+                response.sendRedirect("/login-page?msg=" + URLEncoder.encode(failureMessage, "UTF-8"));
+                return;
+            }
         }
 
-        String ruhunaRegex = "^[a-zA-Z0-9._%+-]+@[a-z0-9]+\\.ruh\\.ac\\.lk$";
+        filterChain.doFilter(request,response);
 
-        if (!email.toLowerCase().matches(ruhunaRegex)) {
-            response.sendRedirect("/login-page?msg=" + URLEncoder.encode("Must use a valid University of Ruhuna email", StandardCharsets.UTF_8));
-            return;
-        }
-
-        filterChain.doFilter(request, response);
     }
 }
